@@ -1,3 +1,8 @@
+2013-10-26 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Plugins/Nib/GormNibWrapperBuilder.m (-initWithDocument:):
+	Don't store nil values in maps.
+
 2013-10-26 Riccardo Mottola <rm@gnu.org>
 
 	* Plugins/Nib/GormNibWrapperBuilder.m
